Kennzahlen zu Preisen, Wohnfläche und Wasserlage ergänzt

--- a/notebooks/king_county_analysis.ipynb
+++ b/notebooks/king_county_analysis.ipynb
@@ -457,6 +457,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 5.1 Verteilung der Immobilienpreise – Kennzahlen 🧮\n",
+    "\n",
+    "Neben der Visualisierung werfen wir einen Blick auf die wichtigsten Kennzahlen:\n",
+    "- **Minimum, Maximum, Median**\n",
+    "- **Mittelwert, Standardabweichung**\n",
+    "- **Quartile**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2.161300e+04\n",
+       "mean     5.400881e+05\n",
+       "std      3.671272e+05\n",
+       "min      7.500000e+04\n",
+       "25%      3.219500e+05\n",
+       "50%      4.500000e+05\n",
+       "75%      6.450000e+05\n",
+       "max      7.700000e+06\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Statistische Kennzahlen für Preis\n",
+    "preis_statistik = df['price'].describe()\n",
+    "preis_statistik\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5.2 Wohnfläche (sqft_living) – Verteilung 🏠📏\n",
     "\n",
     "Wie groß sind die meisten Häuser?  \n",
@@ -479,6 +521,45 @@
     "# Speichern\n",
     "plt.savefig(\"../visuals/wohnflaeche_verteilung.png\")\n",
     "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Wohnfläche (sqft_living) – Kennzahlen 🏠📏\n",
+    "\n",
+    "Wie verteilen sich die Wohnflächen in Zahlen?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    21613.000000\n",
+       "mean      2079.899736\n",
+       "std        918.440897\n",
+       "min        290.000000\n",
+       "25%       1427.000000\n",
+       "50%       1910.000000\n",
+       "75%       2550.000000\n",
+       "max      13540.000000\n",
+       "Name: sqft_living, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Statistische Kennzahlen für Wohnfläche\n",
+    "wohnflaeche_statistik = df['sqft_living'].describe()\n",
+    "wohnflaeche_statistik\n"
    ]
   },
   {
@@ -546,6 +627,128 @@
     "# Speichern\n",
     "plt.savefig(\"../visuals/wasserlage_preisvergleich.png\")\n",
     "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.3 Wasserlage – Durchschnittspreise 💧📊\n",
+    "\n",
+    "Wie unterscheiden sich die **durchschnittlichen Preise** zwischen Häusern mit und ohne Wasserlage?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "waterfront\n",
+       "0    5.315636e+05\n",
+       "1    1.661876e+06\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "waterfront_prices\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.4 Zusammenfassung – Kennzahlen für Preis, Wohnfläche und Wasserlage 🧮\n",
+    "\n",
+    "Die wichtigsten statistischen Kennzahlen auf einen Blick:\n",
+    "- **Preis:** Minimum, Maximum, Median, Quartile, Mittelwert\n",
+    "- **Wohnfläche:** Verteilung der Quadratfuß\n",
+    "- **Wasserlage:** Durchschnittspreise für Häuser mit/ohne Wasserlage\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Immobilienpreise – Kennzahlen\n",
+      "count    2.161300e+04\n",
+      "mean     5.400881e+05\n",
+      "std      3.671272e+05\n",
+      "min      7.500000e+04\n",
+      "25%      3.219500e+05\n",
+      "50%      4.500000e+05\n",
+      "75%      6.450000e+05\n",
+      "max      7.700000e+06\n",
+      "Name: price, dtype: float64\n",
+      "\n",
+      "\n",
+      "🏠 Wohnfläche (sqft_living) – Kennzahlen\n",
+      "count    21613.000000\n",
+      "mean      2079.899736\n",
+      "std        918.440897\n",
+      "min        290.000000\n",
+      "25%       1427.000000\n",
+      "50%       1910.000000\n",
+      "75%       2550.000000\n",
+      "max      13540.000000\n",
+      "Name: sqft_living, dtype: float64\n",
+      "\n",
+      "\n",
+      "💧 Wasserlage vs. Preis – Durchschnittspreise\n",
+      "waterfront\n",
+      "0    5.315636e+05\n",
+      "1    1.661876e+06\n",
+      "Name: price, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Preise – Verteilung\n",
+    "print(\"📊 Immobilienpreise – Kennzahlen\")\n",
+    "print(df['price'].describe())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Wohnfläche – Verteilung\n",
+    "print(\"🏠 Wohnfläche (sqft_living) – Kennzahlen\")\n",
+    "print(df['sqft_living'].describe())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Wasserlage – Durchschnittspreise\n",
+    "print(\"💧 Wasserlage vs. Preis – Durchschnittspreise\")\n",
+    "print(df.groupby('waterfront')['price'].mean())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.5 Interpretation der Kennzahlen 🧠\n",
+    "\n",
+    "### 1️⃣ Immobilienpreise:\n",
+    "- **Typischer Preis: ~450.000 €** (Median), **Durchschnitt: ~540.000 €**.\n",
+    "- **Luxusimmobilien (bis 7,7 Mio €) ziehen den Durchschnitt hoch.**\n",
+    "- **50% der Häuser kosten zwischen 322.000 € und 645.000 €.**\n",
+    "\n",
+    "### 2️⃣ Wohnfläche:\n",
+    "- **Typische Wohnfläche: ~178 m²** (Median), **Durchschnitt: ~193 m²**.\n",
+    "- **Hohe Streuung → Tiny-Häuser (~27 m²) bis Villen (1.250 m²).**\n",
+    "- **50% der Häuser liegen zwischen ~132 m² und 237 m².**\n",
+    "\n",
+    "### 3️⃣ Wasserlage:\n",
+    "- **Ohne Wasserlage: ~531.000 €** im Durchschnitt.\n",
+    "- **Mit Wasserlage: ~1,66 Mio €** → **Wasserlage verdreifacht den Preis!**\n"
    ]
   }
  ],
