Top 10 teure Postleitzahlen analysiert und interpretiert

--- a/notebooks/king_county_analysis.ipynb
+++ b/notebooks/king_county_analysis.ipynb
@@ -750,6 +750,99 @@
     "- **Ohne Wasserlage: ~531.000 €** im Durchschnitt.\n",
     "- **Mit Wasserlage: ~1,66 Mio €** → **Wasserlage verdreifacht den Preis!**\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.6 Teure Gegenden – Postleitzahlen 🏘️📍\n",
+    "\n",
+    "Wie unterscheiden sich die Preise zwischen den Postleitzahlen?  \n",
+    "Wir wollen wissen:\n",
+    "- **Welche PLZ haben die höchsten Durchschnittspreise?**\n",
+    "- **Gibt es bestimmte \"Hotspots\" mit besonders teuren Immobilien?**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "zipcode\n",
+       "98039    2.160607e+06\n",
+       "98004    1.355927e+06\n",
+       "98040    1.194230e+06\n",
+       "98112    1.095499e+06\n",
+       "98102    9.012583e+05\n",
+       "98109    8.796236e+05\n",
+       "98105    8.628252e+05\n",
+       "98006    8.596848e+05\n",
+       "98119    8.494480e+05\n",
+       "98005    8.101649e+05\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Durchschnittspreis pro Postleitzahl berechnen\n",
+    "plz_prices = df.groupby('zipcode')['price'].mean().sort_values(ascending=False).head(10)\n",
+    "\n",
+    "# Ausgabe der Top 10 PLZ\n",
+    "plz_prices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plz_prices.plot(kind='bar', color='purple')\n",
+    "\n",
+    "plt.title(\"Top 10 Postleitzahlen nach Durchschnittspreis\")\n",
+    "plt.xlabel(\"Postleitzahl\")\n",
+    "plt.ylabel(\"Durchschnittspreis (€)\")\n",
+    "\n",
+    "# Speichern in visuals/\n",
+    "plt.savefig(\"../visuals/top10_plz_preise.png\")\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.7 Teure Gegenden – Interpretation 🧠\n",
+    "\n",
+    "### Top 10 Postleitzahlen nach Durchschnittspreis:\n",
+    "| PLZ   | Durchschnittspreis | Region / Besonderheit |\n",
+    "|-------|---------------------|-----------------------|\n",
+    "| **98039** | 2.160.607 €       | Medina – Luxus, Bill Gates |\n",
+    "| **98004** | 1.355.927 €       | Bellevue – Tech-Elite |\n",
+    "| **98040** | 1.194.230 €       | Mercer Island – Insel |\n",
+    "| **98112** | 1.095.499 €       | Capitol Hill – Zentral, gehoben |\n",
+    "| **98102** | 901.258 €         | Eastlake – Wasserlage |\n",
+    "| **98109** | 879.624 €         | Queen Anne – Aussicht |\n",
+    "| **98105** | 862.825 €         | Uni District – Altbauten |\n",
+    "| **98006** | 859.684 €         | Bellevue Süd – Familien |\n",
+    "| **98119** | 849.448 €         | Queen Anne Nord – Skyline |\n",
+    "| **98005** | 810.165 €         | Bellevue Ost – Nähe Tech |\n",
+    "\n",
+    "### Erkenntnisse:\n",
+    "- **Luxusgebiete wie Medina & Mercer Island führen die Liste an**.\n",
+    "- **Tech-Standorte (Bellevue, Microsoft-Nähe) treiben Preise hoch**.\n",
+    "- **Zentrale Lagen mit Wasser-/Skyline-Blick (Queen Anne, Eastlake) sind sehr gefragt**.\n"
+   ]
   }
  ],
  "metadata": {
