Preisentwicklung im Zeitverlauf analysiert und interpretiert

--- a/notebooks/king_county_analysis.ipynb
+++ b/notebooks/king_county_analysis.ipynb
@@ -843,6 +843,114 @@
     "- **Tech-Standorte (Bellevue, Microsoft-Nähe) treiben Preise hoch**.\n",
     "- **Zentrale Lagen mit Wasser-/Skyline-Blick (Queen Anne, Eastlake) sind sehr gefragt**.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.8 Preisentwicklung im Zeitverlauf 📅📈\n",
+    "\n",
+    "Wie haben sich die Immobilienpreise in King County über den betrachteten Zeitraum entwickelt?  \n",
+    "Steigen die Preise? Gibt es Schwankungen?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year_month\n",
+       "2014-05    548080.276584\n",
+       "2014-06    558002.199541\n",
+       "2014-07    544788.764360\n",
+       "2014-08    536445.276804\n",
+       "2014-09    529253.821871\n",
+       "Freq: M, Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Monat aus dem Datum extrahieren\n",
+    "df['year_month'] = df['date'].dt.to_period('M')\n",
+    "\n",
+    "# Durchschnittspreis pro Monat berechnen\n",
+    "preis_trend = df.groupby('year_month')['price'].mean()\n",
+    "\n",
+    "# Ausgabe der ersten Werte\n",
+    "preis_trend.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year_month\n",
+       "2014-05    548080.276584\n",
+       "2014-06    558002.199541\n",
+       "2014-07    544788.764360\n",
+       "2014-08    536445.276804\n",
+       "2014-09    529253.821871\n",
+       "2014-10    539026.971778\n",
+       "2014-11    521961.009213\n",
+       "2014-12    524461.866757\n",
+       "2015-01    525870.889571\n",
+       "2015-02    507851.371200\n",
+       "2015-03    543977.187200\n",
+       "2015-04    561837.774989\n",
+       "2015-05    558126.811146\n",
+       "Freq: M, Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preis_trend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "preis_trend.plot()\n",
+    "\n",
+    "plt.title(\"Durchschnittspreisentwicklung pro Monat\")\n",
+    "plt.xlabel(\"Monat\")\n",
+    "plt.ylabel(\"Durchschnittspreis (€)\")\n",
+    "\n",
+    "# Speichern\n",
+    "plt.savefig(\"../visuals/preisentwicklung_zeitverlauf.png\")\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.9 Preisentwicklung im Zeitverlauf – Interpretation 🧠\n",
+    "\n",
+    "### Erkenntnisse:\n",
+    "- **Sommer 2014 hohe Preise**, dann **ab Herbst/Winter 2014 leichter Rückgang**.\n",
+    "- **Tiefpunkt im Februar 2015** → **Winterdelle im Immobilienmarkt**.\n",
+    "- **Starker Anstieg ab März/April 2015** → **Frühjahrsbelebung, neuer Höchststand**.\n",
+    "- **Saisonale Schwankungen erkennbar** – typisches Muster im Immobilienmarkt.\n"
+   ]
   }
  ],
  "metadata": {
